application/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp
  annotations: 
    cert-manager.io/issuer: "letsencrypt-in-namespace-issuer"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - myapp.95-181-220-26.nip.io
    secretName: myapp.95-181-220-26.nip.io-tls
  rules:
  - host: myapp.95-181-220-26.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myapp-service
            port:
              number: 8080
